[tool.poetry]
name = "we-go-tonight"
version = "1.0.0"
description = ""
authors = [
    "Markuss Juhnevskis",
    "Daniels Aleksandrs Beigarts",
]
readme = "README.md"
packages = [{include = "we_go_tonight"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.14"
pyyaml = "^6.0"
requests = "^2.28.1"
psycopg2 = "^2.9.5"
thefuzz = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
